--- a/jobrequest/templates/task_request_form.html
+++ b/jobrequest/templates/task_request_form.html
@@ -37,6 +37,13 @@
         <label for="id_organization">Organizasyon:</label>
         {{ form.organization }}
 
+        <label for="id_position_type">Pozisyon:</label>
+        {{ form.position_type }}
+
+
+        <label for="id_position_type_2">Pozisyon:</label>
+        {{ form.position_type_2 }}
+
         <!-- Görev Dropdown -->
         <label for="id_task_name">Görev:</label>
         <select id="id_task_name" name="task_name" onchange="toggleFields()">
