--- a/jobrequest/templates/task_request_list.html
+++ b/jobrequest/templates/task_request_list.html
@@ -18,8 +18,8 @@
         <tr>
             <th>Lokasyon</th>
             <th>Organizasyon</th>
-            <th>Görev Adı</th>
-            <th>Talep Nedeni</th>
+            <th>Pozisyon</th>
+            <th>Talep Türü</th>
             <th>Çalışma Türü</th>
             <th>Alınacak Kişi Sayısı</th>
             <th>Oluşturulma Tarihi</th>
@@ -29,8 +29,8 @@
         <tr>
             <td>{{ task.location }}</td>
             <td>{{ task.organization }}</td>
-            <td>{{ task.task_name }}</td>
-            <td>{{ task.task_type }}</td>
+            <td>{{ task.position_type }}</td>
+            <td>{{ task.position_type_2 }}</td>
             <td>{{ task.work_type }}</td>
             <td>{{ task.personnel_count }}</td>
             <td>{{ task.created_at }}</td>
