--- a/jobrequest/templates/task_request_detail.html
+++ b/jobrequest/templates/task_request_detail.html
@@ -17,12 +17,20 @@
     <table>
         <tr><th>Lokasyon:</th><td>{{ task.location }}</td></tr>
         <tr><th>Organizasyon:</th><td>{{ task.organization }}</td></tr>
-        <tr><th>Görev Adı:</th><td>{{ task.task_name }}</td></tr>
-        <tr><th>Yeni Görev Adı:</th><td>{{ task.new_task_name }}</td></tr>
+        <tr><th>Pozisyon:</th><td>{{ task.position_type }}</td></tr>
         <tr><th>Çalışma Türü:</th><td>{{ task.work_type }}</td></tr>
-        <tr><th>Talep Türü:</th><td>{{ task.task_type }}</td></tr>
+        <tr><th>Talep Türü:</th><td>{{ task.position_type_2 }}</td></tr>
+
+        <!-- Talep Türü Mevcut Kadro ise "Kimin Yerine" göster -->
+        {% if task.position_type_2 == "Mevcut Kadro" %}
         <tr><th>Kimin Yerine:</th><td>{{ task.replacement_for }}</td></tr>
+        {% endif %}
+
+        <!-- Talep Türü İlave Kadro ise "Talep Nedeni" göster -->
+        {% if task.position_type_2 == "İlave Kadro" %}
         <tr><th>Talep Nedeni:</th><td>{{ task.request_reason }}</td></tr>
+        {% endif %}
+
         <tr><th>Açıklama:</th><td>{{ task.description }}</td></tr>
         <tr><th>Göreve Başlama Tarihi:</th><td>{{ task.start_date }}</td></tr>
         <tr><th>Alınacak Kişi Sayısı:</th><td>{{ task.personnel_count }}</td></tr>
