--- a/job_application/templates/job_application_form.html
+++ b/job_application/templates/job_application_form.html
@@ -265,14 +265,18 @@ button[type="submit"]:hover {
 
             <!-- Ad Soyad -->
             <div class="form-group">
-                <label for="id_full_name">Ad Soyad:</label>
-                <input type="text" id="id_full_name" name="full_name" required>
+                <label for="id_name">İsim:</label>
+                <input type="text" id="id_name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="id_surname">Soyisim:</label>
+                <input type="text" id="id_surname" name="surname" required>
             </div>
 
             <!-- Telefon Numarası -->
             <div class="form-group">
                 <label for="id_phone_number">Telefon Numarası:</label>
-                <input type="text" id="id_phone_number" name="phone_number" required>
+                <input type="text" id="id_phone_number" name="phone" required>
             </div>
 
             <!-- Doğum Tarihi -->
@@ -280,7 +284,23 @@ button[type="submit"]:hover {
                 <label for="birth_date">Doğum Tarihi:</label>
                 <input type="date" id="birth_date" name="birth_date" required>
             </div>
+            <!-- Email -->
+            <div class="form-group">
+                <label for="id_email">Email:</label>
+                <input type="email" id="id_email" name="email" required>
+            </div>
 
+            <!-- Experience -->
+            <div class="form-group">
+                <label for="id_experience">Deneyimler:</label>
+                <textarea id="id_experience" name="experience" rows="4" required></textarea>
+            </div>
+
+            <!-- Skills -->
+            <div class="form-group">
+                <label for="id_skills">Beceriler:</label>
+                <textarea id="id_skills" name="skills" rows="4" required></textarea>
+            </div>
             <!-- İkamet (İl ve İlçe) -->
             <div class="form-group">
                 <label for="residence_city">İkamet - İl:</label>
@@ -298,6 +318,12 @@ button[type="submit"]:hover {
                 </select>
             </div>
 
+            <label for="id_application_date">Başvuru Tarihi:</label>
+            {{ application_form.application_date }}
+            <label for="id_department">Departman:</label>
+            {{ candidate_form.department }}
+            <label for="id_school_name">Mezun Olunan Okul Adı:</label>
+            {{ candidate_form.school_name }}
             <!-- Eğitim Durumu -->
             <div class="form-group">
                 <label for="id_education_level">Eğitim Durumu:</label>
@@ -313,19 +339,27 @@ button[type="submit"]:hover {
             </div>
 
             <!-- Okul ve Bölüm Adı -->
-            <div id="school-fields" class="form-group hidden">
-                <label for="school_name">Okul Adı:</label>
-                <input type="text" name="school_name" id="school_name" placeholder="Okul Adını Giriniz">
-
-                <label for="department_name">Bölüm Adı:</label>
-                <input type="text" name="department_name" id="department_name" placeholder="Bölüm Adını Giriniz">
-            </div>
-
+{#            <div id="school-fields" class="form-group hidden">#}
+{#                <label for="school_name">Okul Adı:</label>#}
+{#                <input type="text" name="school_name" id="school_name" placeholder="Okul Adını Giriniz">#}
+{##}
+{#                <label for="department_name">Bölüm Adı:</label>#}
+{#                <input type="text" name="department" id="department_name" placeholder="Bölüm Adını Giriniz">#}
+{#            </div>#}
+            <label for="id_application_date">Başvuru Tarihi:</label>
+            {{ application_form.application_date }}
             <div class="form-group">
                 <label for="position">Başvurduğu Pozisyon:</label>
-                <select id="position" name="applied_positions" multiple required>
+                <select id="position" name="application_job" multiple required>
                     {%for position in positions%}
-                         <option value="{{ position.id }}">{{ position.name }}</option>
+                         <option value="{{ position.id }}">
+                             {% if position.position_name %}
+                                {{ position.position_name.position }}
+                             {% elif position.new_position_name %}
+                                {{ position.new_position_name }}
+                             {% else %}
+                                No position specified
+                             {% endif %}{{ position.name }}</option>
                     {%endfor%}
                 </select>
             </div>
@@ -344,7 +378,7 @@ button[type="submit"]:hover {
             <!-- CV Yükleme (Opsiyonel, sadece PDF ve Word) -->
             <div class="form-group">
                 <label for="cv_file">CV Yükleyin (PDF veya Word):</label>
-                <input type="file" id="cv_file" name="cv_file" accept=".pdf,.doc,.docx">
+                <input type="file" id="cv_file" name="uploaded_resume" accept=".pdf,.doc,.docx">
                 <small>Opsiyonel. Sadece PDF veya Word dosyası yükleyebilirsiniz.</small>
             </div>
 
@@ -357,3 +391,4 @@ button[type="submit"]:hover {
         </form>
 
         </div>
+</body>
